--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Based in Decatur, IL with an office in Chicago
 				</aside>
 			</section>
 
-			<section data-background="images/halloween.jpg"></section>
+			<section data-background="images/Halloween-2014.jpg"></section>
 
 			<section data-background="images/jump.gif"></section>
 
@@ -186,14 +186,12 @@ Boilerplate also uses the PHPDoc versions of those same properties.
 <pre><code>if ( ! defined( 'WPINC' ) ) { die; }
 
 function activate_plugin_name() {
-    require_once plugin_dir_path( __FILE__ ) .
-        'includes/class-plugin-name-activator.php';
+    require_once plugin_dir_path( __FILE__ ) . 'includes/class-plugin-name-activator.php';
     Plugin_Name_Activator::activate();
 }
 
 function deactivate_plugin_name() {
-    require_once plugin_dir_path( __FILE__ ) .
-        'includes/class-plugin-name-deactivator.php';
+    require_once plugin_dir_path( __FILE__ ) . 'includes/class-plugin-name-deactivator.php';
     Plugin_Name_Deactivator::deactivate();
 }
 
@@ -286,14 +284,10 @@ Then calls these four methods:
 					<h3>Load Dependencies</h3>
 <pre><code>private function load_dependencies() {
 
-    require_once plugin_dir_path( dirname( __FILE__ ) ) .
-        'includes/class-plugin-name-loader.php';
-    require_once plugin_dir_path( dirname( __FILE__ ) ) .
-        'includes/class-plugin-name-i18n.php';
-    require_once plugin_dir_path( dirname( __FILE__ ) ) .
-        'admin/class-plugin-name-admin.php';
-    require_once plugin_dir_path( dirname( __FILE__ ) ) .
-        'public/class-plugin-name-public.php';
+    require_once plugin_dir_path( dirname( __FILE__ ) ) . 'includes/class-plugin-name-loader.php';
+    require_once plugin_dir_path( dirname( __FILE__ ) ) . 'includes/class-plugin-name-i18n.php';
+    require_once plugin_dir_path( dirname( __FILE__ ) ) . 'admin/class-plugin-name-admin.php';
+    require_once plugin_dir_path( dirname( __FILE__ ) ) . 'public/class-plugin-name-public.php';
 
     $this->loader = new Plugin_Name_Loader();
 
