--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 				<aside class="notes">
 Introduce yourself
 
-Pastor’s kid – moved around, but lived the longest in Nashville, so I consider it home. 6 months ago, my family and I moved to a farm near Decatur, IL.
-
+Pastor’s kid – moved around, but lived the longest in Nashville, so I consider it home.
 I’m also a musician and play guitar and bass.
 				</aside>
 			</section>
@@ -64,6 +63,7 @@ Published 3 plugins: ArtistDataPress, BuddyPress Profile Widgets, and BuddyBar
 				<p class="fragment">Decatur, IL</p>
 				<p class="fragment">dccmarketing.com</p>
 				<aside class="notes">
+6 months ago, my family and I moved to a farm near Decatur, IL.
 Full-service, boutique marketing agency
 Based in Decatur, IL with an office in Chicago
 				</aside>
