--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@ Based in Decatur, IL with an office in Chicago
 
 			<section data-background="images/Halloween-2014.jpg"></section>
 
-			<section data-background="images/jump.gif"></section>
+			<section data-background="images/jump.gif">
+				<h2>Let's Jump In!</h2>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+			</section>
 
 			<section>
 				<h2>WordPress Plugin Boilerplate</h2>
@@ -924,7 +932,7 @@ One of the little things I like including in my plugins are settings link and ro
 
 			<section>
 				<section>
-					<h2>Displays, Partials, & Views, Oh My!</h2>
+					<h2>Displays, Partials, Views, Oh My!</h2>
 					<h3>Shortcode Method</h3>
 <pre><code>if ( is_array( $items ) || is_object( $items ) ) {
 
@@ -937,7 +945,7 @@ One of the little things I like including in my plugins are settings link and ro
 				</section>
 
 				<section>
-					<h2>Displays, Partials, & Views, Oh My!</h2>
+					<h2>Displays, Partials, Views, Oh My!</h2>
 					<h3>Public Class - Display Loop</h3>
 <pre><code>foreach ( $items->posts as $item ) {
 
@@ -950,7 +958,7 @@ I set these up in separate files so I can use a plugin option to switch out the 
 				</section>
 
 				<section>
-					<h2>Displays, Partials, & Views, Oh My!</h2>
+					<h2>Displays, Partials, Views, Oh My!</h2>
 					<h3>Public Class - Display Loop</h3>
 <pre><code>foreach ( $items->posts as $item ) {
 
@@ -963,7 +971,7 @@ The separated files allow for the possibility of using a plugin option to determ
 				</section>
 
 				<section>
-					<h2>Displays, Partials, & Views, Oh My!</h2>
+					<h2>Displays, Partials, Views, Oh My!</h2>
 					<h3>Public Class - Display Single</h3>
 <pre><code>?&gt;&lt;div class="job-wrap"&gt;
     &lt;h1 class="job-title"&gt;&lt;a href="&lt;?php echo get_permalink( $item->ID ); ?>"&gt;&lt;?php echo esc_attr( $item->post_title ); ?&gt;&lt;/a&gt;&lt;/h1&gt;
